include/coquic/ffi/http3.h

typedef struct coquic_http3_client coquic_http3_client_t;
typedef struct coquic_http3_server coquic_http3_server_t;
typedef struct coquic_http3_client_update coquic_http3_client_update_t;
typedef struct coquic_http3_server_update coquic_http3_server_update_t;
typedef uint16_t coquic_http3_error_code_t;
#define COQUIC_HTTP3_ERROR_NO_ERROR 0x0100u
#define COQUIC_HTTP3_ERROR_GENERAL_PROTOCOL_ERROR 0x0101u
#define COQUIC_HTTP3_ERROR_INTERNAL_ERROR 0x0102u
#define COQUIC_HTTP3_ERROR_STREAM_CREATION_ERROR 0x0103u
#define COQUIC_HTTP3_ERROR_CLOSED_CRITICAL_STREAM 0x0104u
#define COQUIC_HTTP3_ERROR_FRAME_UNEXPECTED 0x0105u
#define COQUIC_HTTP3_ERROR_FRAME_ERROR 0x0106u
#define COQUIC_HTTP3_ERROR_EXCESSIVE_LOAD 0x0107u
#define COQUIC_HTTP3_ERROR_ID_ERROR 0x0108u
#define COQUIC_HTTP3_ERROR_SETTINGS_ERROR 0x0109u
#define COQUIC_HTTP3_ERROR_MISSING_SETTINGS 0x010au
#define COQUIC_HTTP3_ERROR_REQUEST_REJECTED 0x010bu
#define COQUIC_HTTP3_ERROR_REQUEST_CANCELLED 0x010cu
#define COQUIC_HTTP3_ERROR_REQUEST_INCOMPLETE 0x010du
#define COQUIC_HTTP3_ERROR_MESSAGE_ERROR 0x010eu
#define COQUIC_HTTP3_ERROR_VERSION_FALLBACK 0x0110u
#define COQUIC_HTTP3_ERROR_QPACK_DECOMPRESSION_FAILED 0x0200u
#define COQUIC_HTTP3_ERROR_QPACK_ENCODER_STREAM_ERROR 0x0201u
#define COQUIC_HTTP3_ERROR_QPACK_DECODER_STREAM_ERROR 0x0202u