bindings/rust/coquic/src/ffi.rs

#![allow(non_camel_case_types)]
#![allow(dead_code)]
#![allow(non_upper_case_globals)]

use std::ffi::c_char;

pub const COQUIC_FFI_ABI_VERSION: u32 = 4;

pub enum coquic_endpoint_t {}
pub enum coquic_result_t {}
pub enum coquic_http3_client_t {}
pub enum coquic_http3_server_t {}
pub enum coquic_http3_client_update_t {}
pub enum coquic_http3_server_update_t {}

pub type coquic_connection_handle_t = u64;
pub type coquic_route_handle_t = u64;
pub type coquic_stream_id_t = u64;
pub type coquic_time_us_t = u64;

pub type coquic_status_t = u8;
pub const COQUIC_STATUS_OK: coquic_status_t = 0;
pub const COQUIC_STATUS_INVALID_ARGUMENT: coquic_status_t = 1;
pub const COQUIC_STATUS_OUT_OF_MEMORY: coquic_status_t = 2;
pub const COQUIC_STATUS_INTERNAL_ERROR: coquic_status_t = 3;

pub type coquic_role_t = u8;
pub const COQUIC_ROLE_CLIENT: coquic_role_t = 0;
pub const COQUIC_ROLE_SERVER: coquic_role_t = 1;

pub type coquic_congestion_control_t = u8;
pub const COQUIC_CONGESTION_CONTROL_NEWRENO: coquic_congestion_control_t = 0;
pub const COQUIC_CONGESTION_CONTROL_CUBIC: coquic_congestion_control_t = 1;
pub const COQUIC_CONGESTION_CONTROL_BBR: coquic_congestion_control_t = 2;
pub const COQUIC_CONGESTION_CONTROL_COPA: coquic_congestion_control_t = 3;

pub type coquic_ecn_codepoint_t = u8;
pub const COQUIC_ECN_UNAVAILABLE: coquic_ecn_codepoint_t = 0;
pub const COQUIC_ECN_NOT_ECT: coquic_ecn_codepoint_t = 1;
pub const COQUIC_ECN_ECT0: coquic_ecn_codepoint_t = 2;
pub const COQUIC_ECN_ECT1: coquic_ecn_codepoint_t = 3;
pub const COQUIC_ECN_CE: coquic_ecn_codepoint_t = 4;

pub type coquic_state_change_t = u8;
pub const COQUIC_STATE_CHANGE_HANDSHAKE_READY: coquic_state_change_t = 0;
pub const COQUIC_STATE_CHANGE_HANDSHAKE_CONFIRMED: coquic_state_change_t = 1;
pub const COQUIC_STATE_CHANGE_FAILED: coquic_state_change_t = 2;

pub type coquic_local_error_code_t = u8;
pub const COQUIC_LOCAL_ERROR_UNSUPPORTED_OPERATION: coquic_local_error_code_t = 0;
pub const COQUIC_LOCAL_ERROR_INVALID_STREAM_ID: coquic_local_error_code_t = 1;
pub const COQUIC_LOCAL_ERROR_INVALID_STREAM_DIRECTION: coquic_local_error_code_t = 2;
pub const COQUIC_LOCAL_ERROR_SEND_SIDE_CLOSED: coquic_local_error_code_t = 3;
pub const COQUIC_LOCAL_ERROR_RECEIVE_SIDE_CLOSED: coquic_local_error_code_t = 4;
pub const COQUIC_LOCAL_ERROR_FINAL_SIZE_CONFLICT: coquic_local_error_code_t = 5;
pub const COQUIC_LOCAL_ERROR_DATAGRAM_NOT_SUPPORTED: coquic_local_error_code_t = 6;
pub const COQUIC_LOCAL_ERROR_DATAGRAM_TOO_LARGE: coquic_local_error_code_t = 7;

pub type coquic_lifecycle_t = u8;
pub const COQUIC_LIFECYCLE_CREATED: coquic_lifecycle_t = 0;
pub const COQUIC_LIFECYCLE_ACCEPTED: coquic_lifecycle_t = 1;
pub const COQUIC_LIFECYCLE_CLOSED: coquic_lifecycle_t = 2;

pub type coquic_migration_reason_t = u8;
pub const COQUIC_MIGRATION_REASON_ACTIVE: coquic_migration_reason_t = 0;
pub const COQUIC_MIGRATION_REASON_PREFERRED_ADDRESS: coquic_migration_reason_t = 1;

pub type coquic_zero_rtt_status_t = u8;
pub const COQUIC_ZERO_RTT_UNAVAILABLE: coquic_zero_rtt_status_t = 0;
pub const COQUIC_ZERO_RTT_NOT_ATTEMPTED: coquic_zero_rtt_status_t = 1;
pub const COQUIC_ZERO_RTT_ATTEMPTED: coquic_zero_rtt_status_t = 2;
pub const COQUIC_ZERO_RTT_ACCEPTED: coquic_zero_rtt_status_t = 3;
pub const COQUIC_ZERO_RTT_REJECTED: coquic_zero_rtt_status_t = 4;

pub type coquic_packet_inspection_direction_t = u8;
pub const COQUIC_PACKET_INSPECTION_OUTBOUND: coquic_packet_inspection_direction_t = 0;
pub const COQUIC_PACKET_INSPECTION_INBOUND: coquic_packet_inspection_direction_t = 1;

pub type coquic_packet_inspection_packet_type_t = u8;
pub const COQUIC_PACKET_INSPECTION_INITIAL: coquic_packet_inspection_packet_type_t = 0;
pub const COQUIC_PACKET_INSPECTION_ZERO_RTT: coquic_packet_inspection_packet_type_t = 1;
pub const COQUIC_PACKET_INSPECTION_HANDSHAKE: coquic_packet_inspection_packet_type_t = 2;
pub const COQUIC_PACKET_INSPECTION_ONE_RTT: coquic_packet_inspection_packet_type_t = 3;

pub type coquic_connection_input_kind_t = u8;
pub const COQUIC_CONNECTION_INPUT_SEND_STREAM: coquic_connection_input_kind_t = 0;
pub const COQUIC_CONNECTION_INPUT_SEND_DATAGRAM: coquic_connection_input_kind_t = 1;
pub const COQUIC_CONNECTION_INPUT_RESET_STREAM: coquic_connection_input_kind_t = 2;
pub const COQUIC_CONNECTION_INPUT_STOP_SENDING: coquic_connection_input_kind_t = 3;
pub const COQUIC_CONNECTION_INPUT_CLOSE: coquic_connection_input_kind_t = 4;
pub const COQUIC_CONNECTION_INPUT_REQUEST_KEY_UPDATE: coquic_connection_input_kind_t = 5;
pub const COQUIC_CONNECTION_INPUT_REQUEST_MIGRATION: coquic_connection_input_kind_t = 6;

pub type coquic_effect_kind_t = u8;
pub const COQUIC_EFFECT_SEND_DATAGRAM: coquic_effect_kind_t = 0;
pub const COQUIC_EFFECT_RECEIVE_STREAM_DATA: coquic_effect_kind_t = 1;
pub const COQUIC_EFFECT_RECEIVE_DATAGRAM_DATA: coquic_effect_kind_t = 2;
pub const COQUIC_EFFECT_PEER_RESET_STREAM: coquic_effect_kind_t = 3;
pub const COQUIC_EFFECT_PEER_STOP_SENDING: coquic_effect_kind_t = 4;
pub const COQUIC_EFFECT_STATE_EVENT: coquic_effect_kind_t = 5;
pub const COQUIC_EFFECT_CONNECTION_LIFECYCLE_EVENT: coquic_effect_kind_t = 6;
pub const COQUIC_EFFECT_PEER_PREFERRED_ADDRESS_AVAILABLE: coquic_effect_kind_t = 7;
pub const COQUIC_EFFECT_RESUMPTION_STATE_AVAILABLE: coquic_effect_kind_t = 8;
pub const COQUIC_EFFECT_ZERO_RTT_STATUS_EVENT: coquic_effect_kind_t = 9;
pub const COQUIC_EFFECT_PACKET_INSPECTION: coquic_effect_kind_t = 10;
pub const COQUIC_EFFECT_NEW_TOKEN_AVAILABLE: coquic_effect_kind_t = 11;

pub type coquic_http3_error_code_t = u16;
pub const COQUIC_HTTP3_ERROR_NO_ERROR: coquic_http3_error_code_t = 0x0100;
pub const COQUIC_HTTP3_ERROR_GENERAL_PROTOCOL_ERROR: coquic_http3_error_code_t = 0x0101;
pub const COQUIC_HTTP3_ERROR_INTERNAL_ERROR: coquic_http3_error_code_t = 0x0102;
pub const COQUIC_HTTP3_ERROR_STREAM_CREATION_ERROR: coquic_http3_error_code_t = 0x0103;
pub const COQUIC_HTTP3_ERROR_CLOSED_CRITICAL_STREAM: coquic_http3_error_code_t = 0x0104;
pub const COQUIC_HTTP3_ERROR_FRAME_UNEXPECTED: coquic_http3_error_code_t = 0x0105;
pub const COQUIC_HTTP3_ERROR_FRAME_ERROR: coquic_http3_error_code_t = 0x0106;
pub const COQUIC_HTTP3_ERROR_EXCESSIVE_LOAD: coquic_http3_error_code_t = 0x0107;
pub const COQUIC_HTTP3_ERROR_ID_ERROR: coquic_http3_error_code_t = 0x0108;
pub const COQUIC_HTTP3_ERROR_SETTINGS_ERROR: coquic_http3_error_code_t = 0x0109;
pub const COQUIC_HTTP3_ERROR_MISSING_SETTINGS: coquic_http3_error_code_t = 0x010a;
pub const COQUIC_HTTP3_ERROR_REQUEST_REJECTED: coquic_http3_error_code_t = 0x010b;
pub const COQUIC_HTTP3_ERROR_REQUEST_CANCELLED: coquic_http3_error_code_t = 0x010c;
pub const COQUIC_HTTP3_ERROR_REQUEST_INCOMPLETE: coquic_http3_error_code_t = 0x010d;
pub const COQUIC_HTTP3_ERROR_MESSAGE_ERROR: coquic_http3_error_code_t = 0x010e;
pub const COQUIC_HTTP3_ERROR_VERSION_FALLBACK: coquic_http3_error_code_t = 0x0110;
pub const COQUIC_HTTP3_ERROR_QPACK_DECOMPRESSION_FAILED: coquic_http3_error_code_t = 0x0200;
pub const COQUIC_HTTP3_ERROR_QPACK_ENCODER_STREAM_ERROR: coquic_http3_error_code_t = 0x0201;
pub const COQUIC_HTTP3_ERROR_QPACK_DECODER_STREAM_ERROR: coquic_http3_error_code_t = 0x0202;

#[repr(C)]
#[derive(Clone, Copy, Debug)]
pub struct coquic_bytes_view_t {
    pub data: *const u8,
    pub length: usize,
}

#[repr(C)]
#[derive(Clone, Copy, Debug)]
pub struct coquic_bytes_t {
    pub data: *const u8,
    pub length: usize,
}

#[repr(C)]
#[derive(Clone, Copy, Debug)]
pub struct coquic_optional_route_handle_t {
    pub has_value: u8,
    pub value: coquic_route_handle_t,
}

#[repr(C)]
#[derive(Clone, Copy, Debug)]
pub struct coquic_optional_connection_handle_t {
    pub has_value: u8,
    pub value: coquic_connection_handle_t,
}

#[repr(C)]
#[derive(Clone, Copy, Debug)]
pub struct coquic_optional_stream_id_t {
    pub has_value: u8,
    pub value: coquic_stream_id_t,
}

#[repr(C)]
#[derive(Clone, Copy, Debug)]
pub struct coquic_optional_time_us_t {
    pub has_value: u8,
    pub value: coquic_time_us_t,
}

#[repr(C)]
#[derive(Clone, Copy, Debug)]
pub struct coquic_optional_u64_t {
    pub has_value: u8,
    pub value: u64,
}

#[repr(C)]
#[derive(Clone, Copy, Debug)]
pub struct coquic_tls_identity_t {
    pub certificate_pem: *const c_char,
    pub certificate_pem_length: usize,
    pub private_key_pem: *const c_char,
    pub private_key_pem_length: usize,
}

#[repr(C)]
#[derive(Clone, Copy, Debug)]
pub struct coquic_zero_rtt_config_t {
    pub attempt: u8,
    pub allow: u8,
    pub application_context: coquic_bytes_t,
}

#[repr(C)]
#[derive(Clone, Copy, Debug)]
pub struct coquic_orphan_zero_rtt_buffer_config_t {
    pub max_packets: usize,
    pub max_bytes: usize,
    pub max_age_us: coquic_time_us_t,
}

#[repr(C)]
#[derive(Clone, Copy, Debug)]
pub struct coquic_transport_config_t {
    pub max_idle_timeout: u64,
    pub max_udp_payload_size: u64,
    pub pmtud_enabled: u8,
    pub pmtud_base_datagram_size: usize,
    pub pmtud_max_datagram_size: usize,
    pub active_connection_id_limit: u64,
    pub disable_active_migration: u8,
    pub ack_delay_exponent: u64,
    pub max_ack_delay: u64,
    pub ack_eliciting_threshold: u64,
    pub initial_max_data: u64,
    pub initial_max_stream_data_bidi_local: u64,
    pub initial_max_stream_data_bidi_remote: u64,
    pub initial_max_stream_data_uni: u64,
    pub initial_max_streams_bidi: u64,
    pub initial_max_streams_uni: u64,
    pub max_datagram_frame_size: u64,
    pub congestion_control: coquic_congestion_control_t,
    pub enable_hystart_plus_plus: u8,
    pub send_stream_fairness: u8,
    pub enable_latency_spin_bit: u8,
    pub grease_reserved_versions: u8,
    pub grease_quic_bit: u8,
    pub enable_optimistic_ack_mitigation: u8,
}

#[repr(C)]
#[derive(Clone, Copy, Debug)]
pub struct coquic_endpoint_config_t {
    pub size: usize,
    pub role: coquic_role_t,
    pub supported_versions: *const u32,
    pub supported_versions_count: usize,
    pub verify_peer: u8,
    pub retry_enabled: u8,
    pub application_protocol: *const c_char,
    pub application_protocol_length: usize,
    pub identity: *const coquic_tls_identity_t,
    pub transport: coquic_transport_config_t,
    pub max_outbound_datagram_size: usize,
    pub zero_rtt: coquic_zero_rtt_config_t,
    pub emit_shared_receive_stream_data: u8,
    pub enable_packet_inspection: u8,
    pub allow_peer_address_change: u8,
    pub max_server_connections: usize,
    pub enable_out_of_order_receive: u8,
    pub orphan_zero_rtt_buffer: coquic_orphan_zero_rtt_buffer_config_t,
}

#[repr(C)]
#[derive(Clone, Copy, Debug)]
pub struct coquic_resumption_state_t {
    pub serialized: coquic_bytes_t,
}

#[repr(C)]
#[derive(Clone, Copy, Debug)]
pub struct coquic_client_connection_config_t {
    pub size: usize,
    pub source_connection_id: coquic_bytes_t,
    pub initial_destination_connection_id: coquic_bytes_t,
    pub original_destination_connection_id: coquic_bytes_t,
    pub has_original_destination_connection_id: u8,
    pub retry_source_connection_id: coquic_bytes_t,
    pub has_retry_source_connection_id: u8,
    pub retry_token: coquic_bytes_t,
    pub original_version: u32,
    pub initial_version: u32,
    pub reacted_to_version_negotiation: u8,
    pub server_name: *const c_char,
    pub server_name_length: usize,
    pub resumption_state: *const coquic_resumption_state_t,
    pub zero_rtt: coquic_zero_rtt_config_t,
}

#[repr(C)]
#[derive(Clone, Copy, Debug)]
pub struct coquic_open_connection_t {
    pub size: usize,
    pub connection: coquic_client_connection_config_t,
    pub initial_route_handle: coquic_route_handle_t,
    pub address_validation_identity: coquic_bytes_t,
}

#[repr(C)]
#[derive(Clone, Copy, Debug)]
pub struct coquic_inbound_datagram_t {
    pub size: usize,
    pub bytes: coquic_bytes_t,
    pub route_handle: coquic_optional_route_handle_t,
    pub address_validation_identity: coquic_bytes_t,
    pub ecn: coquic_ecn_codepoint_t,
}
